--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,7 +55,8 @@
   "MY_TASKS":"My Tasks",
   "AVAILABLE":"Available",
   "UNAVAILABLE":"Unavailable",
-  "AVAILABE_REQUESTS":"Available Requests"
+  "AVAILABE_REQUESTS":"Available Requests",
+  "ACCEPT_REQUEST":"Accept Request"
 
 
 
