--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,71 +2,71 @@
   "LOGIN": "log In",
   "SETTINGS": "Settings",
   "EMAIL": "email address",
-  "MY_ORDERS":"My Orders",
-  "LANGUAGE":"Language",
-  "BEGIN_ORDER":"Begin Order",
-  "MOVABLES_DETAILS":"MOvable Details",
-  "LOCATION":"Location",
-  "BACK":"Back",
-  "NEXT":"Next",
-  "MOVE_FROM":"Move From",
-  "MOVE_TO":"Move To",
-  "SOURCE_LOCATION":"Source Location",
-  "DESTINATION_LOCATION":"Destination Locations",
-  "MOVABLES_IMAGES":"Movables Images",
-  "SOURCE_LOCATION_DATA":"Source Location Data",
-  "PLACE_TYPE":"Place Type",
-  "FLOOR_NUMBER":"Flooe Number",
-  "THERE_IS_ELV":"There is an elevator",
-  "LOG_OUT":"Log Out",
+  "MY_ORDERS": "My Orders",
+  "LANGUAGE": "Language",
+  "BEGIN_ORDER": "Begin Order",
+  "MOVABLES_DETAILS": "MOvable Details",
+  "LOCATION": "Location",
+  "BACK": "Back",
+  "NEXT": "Next",
+  "MOVE_FROM": "Move From",
+  "MOVE_TO": "Move To",
+  "SOURCE_LOCATION": "Source Location",
+  "DESTINATION_LOCATION": "Destination Locations",
+  "MOVABLES_IMAGES": "Movables Images",
+  "SOURCE_LOCATION_DATA": "Source Location Data",
+  "PLACE_TYPE": "Place Type",
+  "FLOOR_NUMBER": "Flooe Number",
+  "THERE_IS_ELV": "There is an elevator",
+  "LOG_OUT": "Log Out",
   "ABOUT_APP": "About",
-  "COMPLAINS":"Complains",
-  "USER_PROFILE":"Profile",
-  "START_MENU":"Menu",
-  "EXECUTE":"Execute",
-  "CANCEL":"Cancel",
-  "OPEN_ORDERS":"Pending Orders",
-  "CLOSED_ORDERS":"Closed Orders",
-  "PICK_UP_ORDER":"Pick up",
-  "LOG_IN":"Log In",
-  "FACEBOOK":"Using Facebook",
-  "OR":"OR",
-  "MY_PROFILE":"My Profile",
-  "CREATE_ACCOUNT":"Sign Up",
-  "VISITOR":"Visitor",
-  "SIGN_UP":"Sign Up",
-  "SIGN_UP_WITH_FB":"Sign Up Using Facebook",
-  "SIGN_UP_WITH_EMAIL":"Sign Up Using email address",
-  "FORGET_PASSWORD":"Forget password",
-  "ESTEMATED_COST":"Estemated Cost",
-  "REQUEST_DATE":"Request Date",
-  "REQUEST_TIME":"Request Time",
-  "REQUEST_STATUS":"Request Status",
-  "ORDER_DETAILS":"Order Details",
-  "DESTINATION_LOCATION_DATA":"Destination",
-  "MOVABLE_DESC":"brief Description about the movables",
-  "THERE_IS_NO_ELV":"There is no elevator",
-  "ARABIC_FULL_NAME":"Full Name In Arabic",
-  "ENGLISH_FULL_NAME":"Full Name In English",
-  "PHONE":"Phone Number",
-  "SAVE":"Save",
-  "HOME":"Home",
-  "REQUESTS":"Requests",
-  "MY_TASKS":"My Tasks",
-  "AVAILABLE":"Available",
-  "UNAVAILABLE":"Unavailable",
-  "AVAILABE_REQUESTS":"Available Requests",
-  "ACCEPT_REQUEST":"Accept Request"
+  "COMPLAINS": "Complains",
+  "USER_PROFILE": "Profile",
+  "START_MENU": "Menu",
+  "EXECUTE": "Execute",
+  "CANCEL": "Cancel",
+  "OPEN_ORDERS": "Pending Orders",
+  "CLOSED_ORDERS": "Closed Orders",
+  "PICK_UP_ORDER": "Pick up",
+  "LOG_IN": "Log In",
+  "FACEBOOK": "Using Facebook",
+  "OR": "OR",
+  "MY_PROFILE": "My Profile",
+  "CREATE_ACCOUNT": "Sign Up",
+  "VISITOR": "Visitor",
+  "SIGN_UP": "Sign Up",
+  "SIGN_UP_WITH_FB": "Sign Up Using Facebook",
+  "SIGN_UP_WITH_EMAIL": "Sign Up Using email address",
+  "FORGET_PASSWORD": "Forget password",
+  "ESTEMATED_COST": "Estemated Cost",
+  "REQUEST_DATE": "Request Date",
+  "REQUEST_TIME": "Request Time",
+  "REQUEST_STATUS": "Request Status",
+  "ORDER_DETAILS": "Order Details",
+  "DESTINATION_LOCATION_DATA": "Destination",
+  "MOVABLE_DESC": "brief Description about the movables",
+  "THERE_IS_NO_ELV": "There is no elevator",
+  "ARABIC_FULL_NAME": "Full Name In Arabic",
+  "ENGLISH_FULL_NAME": "Full Name In English",
+  "PHONE": "Phone Number",
+  "SAVE": "Save",
+  "HOME": "Home",
+  "REQUESTS": "Requests",
+  "MY_TASKS": "My Tasks",
+  "AVAILABLE": "Available",
+  "UNAVAILABLE": "Unavailable",
+  "AVAILABE_REQUESTS": "Available Requests",
+  "ACCEPT_REQUEST": "Accept Request",
 
+  "ERROR_CANNOT_POST_REQUEST": "Error: Cannot post the request",
+  "REQUEST_POSTED": "Your request is sent to all avaliable vehicles.You will get a notification as sson as the request is picked.Thank you",
+  "REQUEST_CANCELED": "Request has been canceled by you.",
+  "ENABLE_LOCATION_ACCESS": "Accessing current location is disabled.",
+  "USER_CREATED": "a password is sent to your email. Please check your email inbox",
+  "GET_CURRENT_LOCATION": "Pick Current Location",
+  "PICK_FROM_MAP": "Pick from map",
+  "PLEASE_CHHOSE_LOCATION": "Choose location",
 
-
-  ,"ERROR_CANNOT_POST_REQUEST":"Error: Cannot post the request"
-  ,"REQUEST_POSTED":"Your request is sent to all avaliable vehicles.You will get a notification as sson as the request is picked.Thank you"
-  ,"REQUEST_CANCELED":"Request has been canceled by you."
-  ,"ENABLE_LOCATION_ACCESS":"Accessing current location is disabled."
-  ,"USER_CREATED":"a password is sent to your email. Please check your email inbox"
-  ,"GET_CURRENT_LOCATION":"Pick Current Location"
-  ,"PICK_FROM_MAP":"Pick from map"
- ,"PLEASE_CHHOSE_LOCATION":"Choose location"
-
+  "NOTIFICATION_2CUSTOMER_ACCEPT_TITLE": "Request Accepted",
+  "NOTIFICATION_2CUSTOMER_ACCEPT_BODY": "Your request has been accepted by the driver.Tap for more details"
 }
