--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -63,7 +63,17 @@
   "SEND_PROPOSAL":"Send Proposal",
   "PROPOSAL_VALUE":"Proposal Value",
   "CALL":"Call",
-
+  "ROAD_MAP":"Road Map",
+  "ORDER_VALUE":"Order Value",
+  "ORDER_DATE":"Order Date",
+  "LUGGAGE_DETAILS":"Luggage Details",
+  "CUSTOMER_NAME_AR":"Customer Name(ar)",
+  "CUSTOMER_NAME_EN":"Customer Name (en)",
+  "CUSTOMER_PHONE":"Customer Phone",
+  "START_JOURNEY":"Start Journey",
+  "DRIVER_START_JOURNEY":"Driver on his way to you",
+  "DRIVER_START_JOURNEY_DETAILS":"The driver is on hs way to you.tap to tack him on the map",
+  "END_JOURNEY":"End Journey",
 
   "ERROR_CANNOT_POST_REQUEST": "Error: Cannot post the request",
   "REQUEST_POSTED": "Your request is sent to all avaliable vehicles.You will get a notification as sson as the request is picked.Thank you",
