--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -74,6 +74,8 @@
   "DRIVER_START_JOURNEY":"السائق بدأ بالتحرك اليك",
   "DRIVER_START_JOURNEY_DETAILS":"هو فى الطريق إليك الان.يمكنك متابعته على الخارطة",
   "END_JOURNEY":"إنهاء الرحلة",
+  "DRIVER_END_JOURNEY_DETAILS":"قام السائق بإنهاء المهمة",
+  "DRIVER_END_JOURNEY":"انهاء المهمة",
 
   "ERROR_CANNOT_POST_REQUEST":"خطأ: لم بتمكن النظام من تمرير طلبك"
   ,"REQUEST_POSTED":"تم ارسال طلبك لكل شركات وسائقى النقل .سيتم تنبيهك حال قبول طلبك."
